--- a/index.html
+++ b/index.html
@@ -1,2 +1,37 @@
-<h1>bienvenue sur mon jeu</p>
-<p> voici mon premier site web !</p>
+<!DOCTYPE html>
+<html>
+ <head>
+    <meta charset="UTF-8">
+    <title>NIGHTFALL PLATFORM - L'Odyssee du NEXUS</title> 
+        body {
+            background-color: black;
+            color:white:
+            font-family: Arial, sans-serif:
+            text-align: center;
+            padding: 20px 
+        }
+        h1 {
+            color: #8a2be2;
+        }
+        .game-box {
+            border: 3px solid #8a2be2;
+            padding: 20px;
+            margin-top: 30px;
+            border-radius: 10px;
+        }
+    </style>
+</head>
+<body>
+
+  <h1>NIGHTFALL PLATFORM - L'Odyssee du  NEXUS</h1>
+
+  <p>Bienvenue dans le jeu que j'ai cree !</p>
+
+  <div class="game-box">
+      <p>  *Ici sera ajoute plus tard :* le vrai jeu jouable !</p>
+      <p>pour l'instant cette page presente le projet.</p>
+  </div>
+
+</body>
+</html> 
+      
